feat: report task message
