# app/Http/Controllers/SaveJobOpeningController.php
@@ -15,11 +15,48 @@ class SaveJobOpeningController extends Controller
     public function index()
     {
         $limit = request()->query('limit', 10);
+
         $saveJobOpenings = SaveJobOpening::with('jobOpening.company.user')
             ->where('student_id', auth()->user()->student->id)
             ->paginate($limit);
 
+        // ubah struktur biar user sejajar dengan company
+        $saveJobOpenings->getCollection()->transform(function ($item) {
+            return [
+                'id' => $item->id,
+                'student_id' => $item->student_id,
+                'job_opening_id' => $item->job_opening_id,
+                'created_at' => $item->created_at,
+                'updated_at' => $item->updated_at,
+
+                'job_opening' => [
+                    'id' => $item->jobOpening->id,
+                    'title' => $item->jobOpening->title,
+                    'description' => $item->jobOpening->description,
+                    'grade' => $item->jobOpening->grade,
+                    'type' => $item->jobOpening->type,
+                    'is_paid' => $item->jobOpening->is_paid,
+                    'is_available' => $item->jobOpening->is_available,
+                ],
+
+                'company' => [
+                    'id' => $item->jobOpening->company->id,
+                    'name' => $item->jobOpening->company->name,
+                    'address' => $item->jobOpening->company->address,
+                    'phone_number' => $item->jobOpening->company->phone_number,
+                ],
+
+                'user' => [
+                    'id' => $item->jobOpening->company->user->id,
+                    'username' => $item->jobOpening->company->user->username,
+                    'email' => $item->jobOpening->company->user->email,
+                    'role' => $item->jobOpening->company->user->role,
+                ]
+            ];
+        });
+
         return response()->json($saveJobOpenings);
+
     }
 
     /**
@@ -78,5 +115,9 @@ class SaveJobOpeningController extends Controller
         }
 
         $saveJobOpening->delete();
+
+        return response()->json([
+            'message' => 'Save Job Opening deleted successfully.'
+        ], 200);
     }
 }
